Changed contents in About me

--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,15 @@
             <h1 class="section-header-title">Pavel Maximov</h1>
             <h1 class="section-header-sub-title">Front-end Developer</h1>
             <h3>
-                I'm a London based Web Developer with 17 years of experience.
-                <br/>I love to code cool features in JavaScript and create beautiful and responsive CSS layouts.
+                <br/>I'm a London based web developer with 17 years of experience.
+                <br/>I love to code cool features in JavaScript and responsive CSS layouts.
                 <br/>I strive to write clean, modular and expressive code, which feels like poetry.
             </h3>
-            <h1 class="section-header-sub-title">
+            <h3 class="section-header-sub-title">
                 <br/>
-                Portfolio
+                My Projects
                 <br/>\/
-            </h1>
+            </h3>
         </header>
         <video class="article-video" height="100%" width="100%" autoplay loop>
             <source src="/video/introB.mp4"  type="video/mp4">
@@ -1108,7 +1108,7 @@
             <div class="experience-content">
                 <h3 class="experience-position">Freelance Front-end Developer / Graphic Designer</h3>
                 <h3 class="experience-employer-name">Consulting several web agencies and clients</h3>
-                <h4 class="experience-subtitle">For 7 year I contributed to:</h4>
+                <h4 class="experience-subtitle">I contributed to:</h4>
                 <ul class="experience-projects">
                     <li>1 e-commerce website (concept store)</li>
                     <li>16 marketing websites (tourism, real estate, medical, education etc.)</li>
@@ -1163,75 +1163,106 @@
             </nav>
         </header>
         <div class="article-body">
-            <div class="article-column-central">
-                <div class="about-interest">
-                    <figure class="about-photo">
-                        <img class="section-header-img" src="/img/me.png">
-                    </figure>
-                    <h3 class="about-interest-title-main">Dear Visitor, <br/>thank you for your interest <br/> in my work.</h3>
-                    <p>
-                        My name is Pavel, I'm a Senior Front-end Developer with 17+ years of experience, based in London, UK.
-                    </p>
-                    <p>
-                        I love to code cool features in JavaScript and to create neat, responsive web layouts with SASS and HTML. I love clean, modular and expressive code, which feels like poetry.
-                    </p>
-                    <p>
-                        Even if I'm more a coder now, I can contribute to the UX/UI design of your project too, since I also have some years of experience as graphic designer.
-                    </p>
-                    <p>
-                        I feel very comfortable working in international teams, having lived in Russia, Italy and Germany I love and embrace cultural diversity.
-                    </p>
-                    <p>
-                        Web development is the profession of my life and I would be happy to contribute to your project with all my passion and skills. <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact me</button>
-                    </p>
-                </div>
-            </div>
-            <h3 class="about-interest-title-main">Besides coding, I also like:</h3>
-            <div class="article-column">
-                <div class="about-interest">
+            <!--<h3 class="about-interest-title-main">Besides coding, I also like:</h3>-->
+
+            <figure class="about-photo">
+                <img class="section-header-img" src="/img/me.png">
+            </figure>
+            <h3 class="">Dear Visitor, <br/>thank you for your interest <br/> in my work.</h3>
+            <p>
+                I love to code cool features in JavaScript and to create neat, responsive web layouts with SASS and HTML. I love clean, modular and expressive code, which feels like poetry.
+            </p>
+            <p>
+                Even if I'm more a coder now, I can contribute to the UX/UI design of your project too, since I also have some years of experience as graphic designer.
+            </p>
+            <p>
+                I feel very comfortable working in international teams, having lived in Russia, Italy and Germany I love and embrace cultural diversity.
+            </p>
+            <p>
+                Web development is the profession of my life and I would be happy to contribute to your project with all my passion and skills. <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact me</button>
+            </p>
+
+
+            <div class="about-interest">
+                <figure class="about-interest-image">
+                    <img class="section-header-img" src="/img/about-salsa2.png">
+                </figure>
+                <div class="about-interest-content">
                     <h3 class="about-interest-title">Salsa dancing</h3>
                     <p>
                         Dancing is pure magic! There is nothing better of a Salsa Friday night after an intense coding week. I love the Caribbean culture, music and atmosphere and I have been dancing Salsa for several years, experimenting also with Bachata, Merengue, Cha-cha, Argentinian Tango and Swing. Strangely enough, I recently realised that dancing and coding have something in common: they both develop intuitive thinking.
                         <button class="interest-button">Dancing</button>
                     </p>
                 </div>
-                <div class="about-interest">
-                    <h3 class="about-interest-title">Meditation</h3>
+            </div>
+            <div class="about-interest">
+                <figure class="about-interest-image">
+                    <img class="section-header-img" src="/img/about-video.png">
+                </figure>
+                <div class="about-interest-content">
+                    <h3 class="about-interest-title">Video editing</h3>
                     <p>
-                        When I started to learn Zazen meditation I was absolutely stunned by the state of intense mental clarity that is possible to achieve with this practice. Since than, the Mindfulness philosophy has been incredibly useful in many areas of my life, also helping me develop a more selfless approach to my profession, reducing attachment to my own opinions and making me much more open to the ideas of others.
-                    </p>
-                </div>
-                <div class="about-interest">
-                    <h3 class="about-interest-title">Photography</h3>
-                    <p>
-                        Started as an experiment, turned into a hobby, photography even became my secondary profession for two years, when, besides coding, I worked on several photo projects. I tried myself with reportage, sports and dancing photography, having a lot of fun with all of them. Now, after focusing exclusively on coding, I photograph only for fun, occasionally using my photo retouching skills on web projects.
-                        <button class="interest-button">My photos</button>
+                        After playing with photography I was naturally attracted to video. My employers at UNICRI accepted my proposal to create a series of video clips about our project and I started to experiment with filming, montage and video effects. The results were encouraging and, for some time, I did video editing as a side activity. Even if now I code only, still my understanding of video formats is often useful on web projects.
+                        <button class="interest-button">Salsa videoclip 1</button>
+                        <button class="interest-button">Salsa videoclip 2</button>
+                        <button class="interest-button">UN videoclip 1</button>
+                        <button class="interest-button">UN videoclip 2</button>
+                        <button class="interest-button">Golf videoclip 2</button>
                     </p>
                 </div>
             </div>
-            <div class="article-column">
-                <div class="about-interest">
+            <div class="about-interest">
+
+                <figure class="about-interest-image">
+                    <img class="section-header-img" src="/img/about-photo.png">
+                </figure>
+                <div class="about-interest-content">
+                    <h3 class="about-interest-title">Photography</h3>
+                    <p>
+                        Started as an experiment, turned into a hobby, photography even became my secondary profession for two years, when, besides coding, I worked on several photo projects. I tried myself with reportage, sports and dancing photography, having a lot of fun with all of them. Now, after focusing exclusively on coding, I photograph only for fun, occasionally using my photo retouching skills on web projects.
+                        <button class="interest-button">Boxing</button>
+                        <button class="interest-button">Salsa</button>
+                        <button class="interest-button">Buddhist monks</button>
+                    </p>
+                </div>
+            </div>
+            <div class="about-interest">
+                <figure class="about-interest-image">
+                    <img class="section-header-img" src="/img/about-boxing.png">
+                </figure>
+                <div class="about-interest-content">
                     <h3 class="about-interest-title">Boxing</h3>
                     <p>
                         First time I tried boxing I was absolutely terrified, and absolutely thrilled too. This initial fear was the strongest motivation to learn I have ever felt. I fell in love with this sport because of the great life lessons it teaches: fair play, respect for your opponent and to never surrender. I always remember that in front of a coding challenge, when tempted to surrender to a quick hack, instead of work harder for the elegant solution.
                         <button class="interest-button">Boxing</button>
                     </p>
                 </div>
-                <div class="about-interest">
+            </div>
+            <div class="about-interest">
+                <figure class="about-interest-image">
+                    <img class="section-header-img" src="/img/me.png">
+                </figure>
+                <div class="about-interest-content">
                     <h3 class="about-interest-title">Graphic design</h3>
                     <p>
                         I was 11 when I got my first computer, it was a super fast 386 PC with 2Mb of RAM, and I was totally fascinated by the most unexpected software: Paint! I spent countless hours with it, creating my own graphics, it was magic! Than came Photoshop, Corel Draw, and in 1998 I started my career becoming a web and print designer. Later I came to love coding even more, but occasionally I still have some fun designing.
                         <button class="interest-button">My designs</button>
                     </p>
                 </div>
-                <div class="about-interest">
-                    <h3 class="about-interest-title">Video editing</h3>
+            </div>
+            <div class="about-interest">
+                <figure class="about-interest-image">
+                    <img class="section-header-img" src="/img/about-meditation.png">
+                </figure>
+                <div class="about-interest-content">
+                    <h3 class="about-interest-title">Meditation</h3>
                     <p>
-                        After playing with photography I was naturally attracted to video. My employers at UNICRI accepted my proposal to create a series of video clips about our project and I started to experiment with filming, montage and video effects. The results were encouraging and, for some time, I did video editing as a side activity. Even if now I code only, still my understanding of video formats is often useful on web projects.
-                        <button class="interest-button">My videos</button>
+                        Dancing is pure magic! There is nothing better of a Salsa Friday night after an intense coding week. I love the Caribbean culture, music and atmosphere and I have been dancing Salsa for several years, experimenting also with Bachata, Merengue, Cha-cha, Argentinian Tango and Swing. Strangely enough, I recently realised that dancing and coding have something in common: they both develop intuitive thinking.
+                        <button class="interest-button">Dancing</button>
                     </p>
                 </div>
             </div>
+
         </div>
     </section>
 
