--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,15 @@
             </figure>
             <h1 class="section-header-title">Pavel Maximov</h1>
             <h1 class="section-header-sub-title">Front-end Developer</h1>
-            <h3>
+            <p class="intro-message">
+                Hello, welcome!
                 <br/>I'm a London based web developer with 17 years of experience.
-                <br/>I love to code cool features in JavaScript and responsive CSS layouts.
+                <br/>I love to code cool features in JavaScript and create beautiful and responsive CSS layouts.
                 <br/>I strive to write clean, modular and expressive code, which feels like poetry.
-            </h3>
+                <br/>Give a look to my work.
+            </p>
             <h3 class="section-header-sub-title">
-                <br/>
-                My Projects
+                Projects
                 <br/>\/
             </h3>
         </header>
@@ -1159,67 +1160,56 @@
             <span class="section-header-secondary-title">Front-end Developer</span>
             <h2 class="section-header-title">About me</h2>
             <nav class="section-header-nav">
-                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button><br/><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Resume</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Code</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
             </nav>
         </header>
-        <div class="article-body">
-            <!--<h3 class="about-interest-title-main">Besides coding, I also like:</h3>-->
-
-            <figure class="about-photo">
-                <img class="section-header-img" src="/img/me.png">
-            </figure>
-            <h3 class="">Dear Visitor, <br/>thank you for your interest <br/> in my work.</h3>
-            <p>
-                I love to code cool features in JavaScript and to create neat, responsive web layouts with SASS and HTML. I love clean, modular and expressive code, which feels like poetry.
-            </p>
-            <p>
-                Even if I'm more a coder now, I can contribute to the UX/UI design of your project too, since I also have some years of experience as graphic designer.
-            </p>
-            <p>
-                I feel very comfortable working in international teams, having lived in Russia, Italy and Germany I love and embrace cultural diversity.
-            </p>
-            <p>
-                Web development is the profession of my life and I would be happy to contribute to your project with all my passion and skills. <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact me</button>
-            </p>
-
-
+        <article class="article-body">
+            <div class="about-intro">
+                <figure class="about-photo">
+                    <img class="me" src="/img/me.png">
+                </figure>
+                <h3 class="about-interest-title-main">Hi, it's super nice to meet you!</h3>
+                <p>
+                    My name is Pavel,<br/>
+                    I'm a London based web developer and life enthusiast :D<br/>
+                    I'm kind of a nomad, was born in 1981 in the cold Siberia region in Soviet Union, <br/>
+                    later on moved to the warm shores of Italy, <br/>
+                    than spent some time in Germany and now I'm getting wet in the UK. <br/>
+                    Besides coding and being super nerd I also love to do a buch of other stuff, give a look!</p>
+            </div>
+            <h3 class="about-interest-title-main">My hobbies</h3>
             <div class="about-interest">
                 <figure class="about-interest-image">
-                    <img class="section-header-img" src="/img/about-salsa2.png">
+                    <img class="me" src="/img/about-salsa.png">
                 </figure>
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Salsa dancing</h3>
                     <p>
-                        Dancing is pure magic! There is nothing better of a Salsa Friday night after an intense coding week. I love the Caribbean culture, music and atmosphere and I have been dancing Salsa for several years, experimenting also with Bachata, Merengue, Cha-cha, Argentinian Tango and Swing. Strangely enough, I recently realised that dancing and coding have something in common: they both develop intuitive thinking.
-                        <button class="interest-button">Dancing</button>
+                        Dancing is magic! There is nothing better of a Salsa Friday night after an intense coding week. I love the Caribbean culture, music and atmosphere and I have been dancing Salsa for several years, experimenting also with Bachata, Merengue, Cha-cha, Argentinian Tango and Swing. Strangely enough, I recently realised that dancing and coding have something in common: they both develop intuitive thinking.
                     </p>
                 </div>
             </div>
             <div class="about-interest">
                 <figure class="about-interest-image">
-                    <img class="section-header-img" src="/img/about-video.png">
+                    <img class="me" src="/img/about-boxing.png">
                 </figure>
                 <div class="about-interest-content">
-                    <h3 class="about-interest-title">Video editing</h3>
+                    <h3 class="about-interest-title">Boxing</h3>
                     <p>
-                        After playing with photography I was naturally attracted to video. My employers at UNICRI accepted my proposal to create a series of video clips about our project and I started to experiment with filming, montage and video effects. The results were encouraging and, for some time, I did video editing as a side activity. Even if now I code only, still my understanding of video formats is often useful on web projects.
-                        <button class="interest-button">Salsa videoclip 1</button>
-                        <button class="interest-button">Salsa videoclip 2</button>
-                        <button class="interest-button">UN videoclip 1</button>
-                        <button class="interest-button">UN videoclip 2</button>
-                        <button class="interest-button">Golf videoclip 2</button>
+                        First time I tried boxing I was terrified, terrified and absolutely thrilled. This initial fear was the strongest motivation to learn I have ever felt. I fell in love with this sport because of the great life lessons it teaches: fair play, respect for your opponent and to never surrender. I always remember that in front of a coding challenge, when tempted to surrender to a quick hack, instead of work harder for the elegant solution.
                     </p>
                 </div>
             </div>
             <div class="about-interest">
-
                 <figure class="about-interest-image">
-                    <img class="section-header-img" src="/img/about-photo.png">
+                    <img class="me" src="/img/about-photo.png">
                 </figure>
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Photography</h3>
                     <p>
-                        Started as an experiment, turned into a hobby, photography even became my secondary profession for two years, when, besides coding, I worked on several photo projects. I tried myself with reportage, sports and dancing photography, having a lot of fun with all of them. Now, after focusing exclusively on coding, I photograph only for fun, occasionally using my photo retouching skills on web projects.
+                        Started as an experiment, turned into a hobby, photography even became my secondary profession for two years, when, besides coding, I worked on several photo projects. I tried myself with reportage, sports and dancing photography, having a lot of fun with all of them. Now I photograph only for fun, occasionally using my photo retouching skills on web projects. <br/>
+                        My photos:
+                        <br/>
                         <button class="interest-button">Boxing</button>
                         <button class="interest-button">Salsa</button>
                         <button class="interest-button">Buddhist monks</button>
@@ -1228,42 +1218,48 @@
             </div>
             <div class="about-interest">
                 <figure class="about-interest-image">
-                    <img class="section-header-img" src="/img/about-boxing.png">
+                    <img class="me" src="/img/about-video.png">
                 </figure>
                 <div class="about-interest-content">
-                    <h3 class="about-interest-title">Boxing</h3>
+                    <h3 class="about-interest-title">Video</h3>
                     <p>
-                        First time I tried boxing I was absolutely terrified, and absolutely thrilled too. This initial fear was the strongest motivation to learn I have ever felt. I fell in love with this sport because of the great life lessons it teaches: fair play, respect for your opponent and to never surrender. I always remember that in front of a coding challenge, when tempted to surrender to a quick hack, instead of work harder for the elegant solution.
-                        <button class="interest-button">Boxing</button>
+                        After experimenting with photography I was naturally attracted to video. I was working in UNICRI at the time and proposed them to create a series of video clips about our projects. The results were encouraging and since experimenting with filming, montage and video effects was so much fun that, for some time, I did video editing as a side activity. Even if now I only code, sometimes I still use my understanding of video formats on web projects. <br/>
+                        My videoclips:
+                        <button class="interest-button">Salsa 1</button>
+                        <button class="interest-button">Salsa 2</button>
+                        <button class="interest-button">UNICRI video 1</button>
+                        <button class="interest-button">UNICRI video 2</button>
+                        <button class="interest-button">Golf</button>
                     </p>
                 </div>
             </div>
             <div class="about-interest">
                 <figure class="about-interest-image">
-                    <img class="section-header-img" src="/img/me.png">
+                    <img class="me" src="/img/about-design.png">
                 </figure>
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Graphic design</h3>
                     <p>
-                        I was 11 when I got my first computer, it was a super fast 386 PC with 2Mb of RAM, and I was totally fascinated by the most unexpected software: Paint! I spent countless hours with it, creating my own graphics, it was magic! Than came Photoshop, Corel Draw, and in 1998 I started my career becoming a web and print designer. Later I came to love coding even more, but occasionally I still have some fun designing.
-                        <button class="interest-button">My designs</button>
+                        I was eleven when I got my first computer, it was a super fast 386 PC with 2Mb of RAM, and I was totally fascinated by the most unexpected software: MS Paint! I spent countless hours with it, creating my own graphics, it was magic! Than came Photoshop, Corel Draw, and in 1998 I started my career becoming a web designer. Later I came to love coding even more, but I still open Photoshop and Illustrator quite often, when I need to work with designs on the projects.<br/>
+                        My designs:
+                        <button class="interest-button">Brochures</button>
+                        <button class="interest-button">Posters</button>
+                        <button class="interest-button">Illustrations for kids</button>
                     </p>
                 </div>
             </div>
             <div class="about-interest">
                 <figure class="about-interest-image">
-                    <img class="section-header-img" src="/img/about-meditation.png">
+                    <img class="me" src="/img/about-meditation.png">
                 </figure>
                 <div class="about-interest-content">
                     <h3 class="about-interest-title">Meditation</h3>
                     <p>
-                        Dancing is pure magic! There is nothing better of a Salsa Friday night after an intense coding week. I love the Caribbean culture, music and atmosphere and I have been dancing Salsa for several years, experimenting also with Bachata, Merengue, Cha-cha, Argentinian Tango and Swing. Strangely enough, I recently realised that dancing and coding have something in common: they both develop intuitive thinking.
-                        <button class="interest-button">Dancing</button>
+                        When I started to learn Zen meditation I was absolutely stunned by the state of intense mental clarity that is possible to achieve with this practice. Since than, meditation and the Mindfulness philosophy has been incredibly useful in many areas of my life, also helping me develop a more selfless approach to my profession, reducing attachment to my own opinions and making me much more open to the ideas of others.
                     </p>
                 </div>
             </div>
-
-        </div>
+        </article>
     </section>
 
     <section id="contact">
