Added the References section

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <h1 class="section-header-sub-title">Front-end Developer</h1>
             <p class="intro-message">
                 Hello, welcome!
-                <br/>I'm a London based web developer with 17 years of experience.
+                <br/>I'm Pavel, a London based web developer with 17 years of experience.
                 <br/>I love to code cool features in JavaScript and create beautiful and responsive CSS layouts.
                 <br/>I strive to write clean, modular and expressive code, which feels like poetry.
                 <br/>Give a look to my work.
@@ -1050,18 +1050,7 @@
                     <li>4 web apps (multimedia contents streaming)</li>
                     <li>UX design and mockups</li>
                 </ul>
-                <!--<h4 class="experience-subtitle">LinkedIn Referencies</h4>-->
-                <!--<div class="experience-reference">-->
-                <!--<p class="experience-reference-content">-->
-                <!--<img src="/img/experience/quotes-open.svg" class="quote-open">-->
-                <!--Pavel is a hard and trustworthy worker, detail oriented, always ready and capable to find brilliant solutions with his creative mind and his fresh look on problems.-->
-                <!--<button class="experience-reference-more-button"> Read all</button>-->
-                <!--<img src="/img/experience/quotes-close.svg" class="quote-close">-->
-                <!--</p>-->
-                <!--<p class="experience-reference-author">-->
-                <!--Giuseppe Sisto<br/>R&D Senior Researcher at Telecom Italia-->
-                <!--</p>-->
-                <!--</div>-->
+
             </div>
         </article>
         <article class="article-body">
@@ -1078,28 +1067,6 @@
                     <li>30+ print designs (brochures, posters, books, adv etc.)</li>
                     <li>Photo and video reportages</li>
                 </ul>
-                <!--<h4 class="experience-subtitle">LinkedIn Referencies</h4>-->
-                <!--<div class="experience-reference">-->
-                <!--<p class="experience-reference-content">-->
-                <!--<img src="/img/experience/quotes-open.svg" class="quote-open">-->
-                <!--Pavel performed very well on all our requirements, displaying a solid understanding of web technologies like HTML, CSS, Javascript and CMS systems, together with an outstanding care in polishing the layout on all browsers, which was important to reach our audiences in the less developer countries.-->
-                <!--<button class="experience-reference-more-button"> Read all</button>-->
-                <!--<img src="/img/experience/quotes-close.svg" class="quote-close">-->
-                <!--</p>-->
-                <!--<p class="experience-reference-author">-->
-                <!--Francesco Cappe'<br/>Head of the UNICRI Security Governance/Counter-Terrorism Laboratory-->
-                <!--</p>-->
-                <!--</div>-->
-                <!--<div class="experience-reference">-->
-                <!--<p class="experience-reference-content">-->
-                <!--<img src="/img/experience/quotes-open.svg" class="quote-open">-->
-                <!--Pavel contributed not only to the technical side of the project but also helped us to structure the considerable amount of information we had in order to make it more suitable for the e-learning format.<button class="experience-reference-more-button"> Read all</button>-->
-                <!--<img src="/img/experience/quotes-close.svg" class="quote-close">-->
-                <!--</p>-->
-                <!--<p class="experience-reference-author">-->
-                <!--Marian de Bruijn<br/>Programme Coordinator at UNICRI-->
-                <!--</p>-->
-                <!--</div>-->
             </div>
         </article>
         <article class="article-body">
@@ -1146,9 +1113,162 @@
                 <ul class="experience-projects">
                     <li>3 webzines (videogames)</li>
                 </ul>
-
             </div>
         </article>
+    </section>
+
+    <section id="references">
+        <article class="article-body">
+            <!--<h2 class="references-title">From LinkedIn references</h2>-->
+            <div class="references-content">
+                <div class="carousel slide" id="references-main-carousel" >
+                    <ol class="carousel-indicators">
+                        <li data-target="#references-main-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#references-main-carousel" data-slide-to="1"></li>
+                        <li data-target="#references-main-carousel" data-slide-to="2"></li>
+                        <li data-target="#references-main-carousel" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <div class="carousel-item-content">
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        In the course of his employment with our company, Mr. Maximov demonstrated his extensive professional experience and accordingly had full command of his area of responsibility. His quick perceptive faculty enabled him to understand even the most difficult situations immediately and always recognise the heart of the matter.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Tobias Reuter</strong><br/>
+                                        Director of Software Engineering at Rocket Internet SE
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Pavel provided an invaluable contribution to enhance the public visibility of our projects in the field of international crime prevention. Pavel performed very well on all our requirements, displaying a solid understanding of web technologies like HTML, CSS, Javascript and CMS systems, together with an outstanding care in polishing the layout on all browsers, which was important to reach our audiences in the less developer countries.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Francesco Cappè</strong><br/>
+                                        Head of the Security Governance/Counter-Terrorism Laboratory at UNICRI
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Pavel's skills-set includes a wide range of web technologies like JavaScript, AngularJS, CSS3, HTML5, Json, Ajax, HTTP/HTTPS, and he also demonstrated a refined understanding of design and user experience, creating for us several mockups for experimental web services.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Stefania Lisa</strong><br/>
+                                        Project Manager PMP® at Telecom Italia
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-item-content">
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        On all his tasks Pavel received extremely positive feedback and appreciation not only from me but also from other colleagues on the teams. It was a pleasure working with Pavel on both projects and I would recommend him without hesitation as a Senior Frontend Developer.
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Daniel Santos</strong><br/>Director of Product at Rocket Internet SE
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Pavel has an very deep understanding of modern IT technologies, in primis JavaScript, HTML5, CSS3, Single-page Web Application, Object-oriented programming. Besides, he has a great aesthetic taste, which complements his technical skills as a frontend developer.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Giuseppe Sisto</strong><br/>R&D Senior Researcher at Telecom Italia
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        On the IT side Pavel contributed with his considerable expertise and skills in web development, HTML, CSS, Javascript and he also created designs for our portals. Professionally Pavel is a hard worker with innovative ideas and he is also a very pleasant person to work with.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Marian de Bruijn</strong><br/>Programme Coordinator at United Nations Interregional Crime and Justice Research Institute (UNICRI)
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-item-content">
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        I also want to mention Pavel's attention to details and his patience to achieve pixel perfection when building the page. Finally we all really enjoyed his friendly and cheerful personality, Pavel brings a lot to the table and I would highly recommend him.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Joe Gemayel</strong><br/>Director of Product at Rocket Internet SE
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Pavel's very analytical approach to developing, helped us catching any UI glitches and inconsistencies in the feature specs early, which to me as a Product Manager was of such a great value. He always impressed with the high quality of work he delivered, but even more with his kind-hearted, genuine and gracious character that made for an amazing addition to the team.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Eveline Moczko</strong><br/>Product Manager at Rocket Internet SE
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Having reviewed Pavel's pull requests many times I personally verified the great quality of his contribution on a diverse range of technologies like SASS, HTML5, JS, Backbone.js, Twig and jQuery. Also on some occasions I was really amazed by his easy solutions to some quite tricky problems.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Filipe Moura</strong><br/>Lead Software Engineer at Rocket Internet SE
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-item-content">
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Pavel's skills are very versatile, ranging from latest frontend techs to all the bread and butter tools for designers. This allows him to individually take over tasks beyond his responsibility when time is short, not stopping at missing designs or specifications. His ability to strife for good code, and to easily switch to an efficient execution during crunch-time, makes him an awesome addition to any team.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>David Latotzky</strong><br/>Lead Software Engineer at Rocket Internet SE
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Pavel is a talented web developer, a rare combination of a skillful software engineer and a designer. I've seen him solving some very hard Backbone.js tickets, involving highly complex MV* JavaScript on our e-commerce, than completing tricky responsive layout tasks using SASS and than opening Photoshop and Illustrator every time we needed to touch our designs.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Steffen Kraft</strong><br/>Frontend Developer at Rocket Internet SE
+                                    </p>
+                                </div>
+                                <div class="reference-wrapper">
+                                    <p class="reference-content">
+                                        <img src="/img/experience/quotes-open.svg" class="quote-open">
+                                        Pavel's abilities when handling complex responsive single page application made a clear difference in the quality of the project, every tasks assigned was done with precision and care. Pavel is a team player, working with the team, bringing it to life and pushing it for the best.”
+                                    </p>
+                                    <p class="reference-author">
+                                        <strong>Maxime Gaudron</strong><br/>Software Engineer at Rocket Internet SE
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#references-main-carousel" role="button" data-slide="prev">
+                    <
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#references-main-carousel" role="button" data-slide="next">
+                    >
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </article>
+
     </section>
 
     <section id="about">
@@ -1168,7 +1288,7 @@
                 <figure class="about-photo">
                     <img class="me" src="/img/me.png">
                 </figure>
-                <h3 class="about-interest-title-main">Hi, it's super nice to meet you!</h3>
+                <h3 class="about-interest-title-main">Hi, nice to meet you!</h3>
                 <p>
                     My name is Pavel,<br/>
                     I'm a London based web developer and life enthusiast :D<br/>
@@ -1177,7 +1297,7 @@
                     than spent some time in Germany and now I'm getting wet in the UK. <br/>
                     Besides coding and being super nerd I also love to do a buch of other stuff, give a look!</p>
             </div>
-            <h3 class="about-interest-title-main">My hobbies</h3>
+            <h3 class="about-interest-title-main">Besides coding, I also like:</h3>
             <div class="about-interest">
                 <figure class="about-interest-image">
                     <img class="me" src="/img/about-salsa.png">
